@@ -1,4 +1,4 @@
-// Copyright (C) 2006 Free Software Foundation, Inc.
+// Copyright (C) 2006, 2007, 2008 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -28,7 +28,13 @@ void test01()
 
   std::list<int> l;
 
-  VERIFY( l.max_size() == l.get_allocator().max_size() );
+#ifndef _GLIBCXX_DEBUG
+  using std::_List_node;
+#else
+  using std::_GLIBCXX_STD_D::_List_node;
+#endif
+
+  VERIFY( l.max_size() == std::allocator<_List_node<int> >().max_size() );
 }
 
 int main()
