@@ -1,4 +1,4 @@
-// Copyright (C) 2006 Free Software Foundation, Inc.
+// Copyright (C) 2006, 2007, 2008 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -28,7 +28,8 @@ void test01()
 
   std::map<int, int> m;
 
-  VERIFY( m.max_size() == m.get_allocator().max_size() );
+  VERIFY( (m.max_size() == std::allocator<std::_Rb_tree_node<
+	                   std::pair<const int, int> > >().max_size()) );
 }
 
 int main()
