@@ -1,4 +1,4 @@
-// Copyright (C) 2006 Free Software Foundation, Inc.
+// Copyright (C) 2006, 2007, 2008 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -28,7 +28,8 @@ void test01()
 
   std::set<int> s;
 
-  VERIFY( s.max_size() == s.get_allocator().max_size() );
+  VERIFY( s.max_size() ==
+	  std::allocator<std::_Rb_tree_node<int> >().max_size() );
 }
 
 int main()
